pipeline/templates/dc.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: %name% 
  labels:
    app: %name%
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: %name%
    spec:
      containers:
      - name: default-container
        image: busybox:latest
        ports:
        - containerPort: 8080
