pipeline/templates/svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: %name%
  name: %name%
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: %name%
  sessionAffinity: None
  type: ClusterIP
