pipeline/templates/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: %name%
  name: %name%
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: %name%
    weight: 100
  wildcardPolicy: None
